# conceptmap

./: .geminiignore  .gitignore  GEMINI.md  GEMINI2.md  GEMINI3.md  README.md  bun.lockb  galten.ts  galten2.ts  luman-list.ts  package.json  prompt.md  svelte.config.js  test.js  tsconfig.json  vite.config.js  vite.config.ts  코드 온톨로지.md
.gemini/: settings.json
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.kr.md  prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  tasks.json
.zed/: settings.json
design/: kuzu_luman.md  ui.md  단위기능요구정의서.md  상세기획서.md  상위기획서.md
design/LumanExample/: LexoRank.ts  Note.ts  test.ts  test2.ts
design/project/: 1.vault.md  2.1.ticket.md  2.2.scheme.md  2.3.schema-detail.md  2.4.query.md  2.mvp-update.md  2.mvp.md
document/: command-hotkey-guide.md  minSvelte.md  store-guide.md  svelte-view-guide.md  tauri-api-guide.md  webdev_checklist.md
document/svelte5/: $bindable.md  $derived.md  $effect.md  $host.md  $inspect.md  $props.md  $state.md  @const.md  @debug.md  @html.md  @render.md  animate.md  await.md  basic-markup.md  bind.md  class.md  compiler-errors.md  compiler-warnings.md  context.md  custom-elements.md  each.md  (+59 more)
src/: app.css  app.html  splitpanes.css
src-py/: build.md  main-aarch64-apple-darwin.spec  main.py
src-tauri/: Cargo.toml  conf.backup.md  crate.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  epub_parser.rs  error.rs  file_system.rs  kuzu_query.rs  lib.rs  lib.rs.md  main.rs  terminal.rs  vault_manager.rs  vault_manager.rs.md
src-tauri/src copy/: lib.rs  main.rs
src-tauri/src/kuzudb/: all.md  commands.rs  commands.rs.md  db.rs  db.rs.md  error.rs  graph_elements.rs  mod.rs  models.rs  models.rs.md  pool.rs  relationType.md  schema.rs  summary.md  todo.md
src-tauri/src/kuzudb/domain/: mod.rs  models.rs  payloads.rs  schema.rs
src-tauri/src/kuzudb/repository/: mod.rs  nodes.rs  relations.rs  utils.rs
src-tauri/src/kuzudb/service/: mod.rs  note.rs
src-tauri/src/md/: cards.md  commands.rs.md  files.md  kuzu_query.rs  mod.rs.md  schema.rs.md
src-tauri/src/sidecar/: commands.rs  error.rs  kuzu_query.rs  mod.rs  model.rs  state.rs
(+367 files in other folders)
