[package]
name = "conceptmap"
version = "0.1.0"
description = "conceptmap"
authors = ["wis"]
edition = "2021"

[lib]
name = "conceptmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2"
tokio = { version = "1.45.1", features = [
  "sync",
  "macros",
  "rt-multi-thread",
  "process",
] }
base64 = "0.22.1"
# portable-pty = "0.9.0"
# futures = "0.3.31"
# pulldown-cmark = { version = "0.13.0", features = ["html"] }
