[package]
name = "conceptmap"
version = "0.1.0"
description = "conceptmap"
authors = ["wis"]
edition = "2021"

[lib]
name = "conceptmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }      # 직렬화/역직렬화
serde_json = "1.0.140"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2"
base64 = "0.22.1"
kuzu = "0.11.2"
anyhow = "1.0.86"
tauri-plugin-store = "2"
uuid = { version = "1.18.0", features = ["v4"] }
time = "0.3.42"
thiserror = "2.0.16"
